--- a/forum/app/views/dm_forum/admin/forum_categories/index.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/index.html.erb
@@ -1,29 +1,27 @@
 <% content_for :content_title, icon_label('font-comments', 'Forum Categories') %>
 
-<%= render :partial => 'dm_forum/admin/forum_categories/index_sidebar' %>
+<%= render partial: 'dm_forum/admin/forum_categories/index_sidebar' %>
 
-<% toolbar = nav_bar_items([ link_to(icon_label('icon-plus', 'New'), new_admin_forum_category_path, :title => 'New Category', :class => "nav-btn-primary") ]) %>
-<%= content_frame :title => '', :toolbar => toolbar do %>
-  <div class="table-overflow">
-    <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_forum.admin_forum_category_sort_path %>">
-      <thead>
-        <tr>
-          <th class="sort_handle"></th>
-          <th>Name</th>
-          <th width="50">Status</th>
+<% toolbar = toolbar_btn(icon_label('icon-plus', 'New'), new_admin_forum_category_path, title: 'New Category', class: "btn btn-xs btn-default") %>
+<%= panel toolbar: toolbar do %>
+  <table id="drag_sort" class="table table-striped table-bordered table-block" data-update_url="<%= dm_forum.admin_forum_category_sort_path %>">
+    <thead>
+      <tr>
+        <th class="sort_handle"></th>
+        <th>Name</th>
+        <th width="50">Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @forum_categories.each do |forum_category| %>
+        <tr class="item" data-item_id="<%= forum_category.id %>">
+          <td class="sort_handle"></td>
+          <td>
+            <%= link_to(forum_category.name.to_s_default, admin_forum_category_path(forum_category)) %>
+          </td>
+          <td></td>
         </tr>
-      </thead>
-      <tbody>
-        <% @forum_categories.each do |forum_category| %>
-          <tr class="item" data-item_id="<%= forum_category.id %>">
-            <td class="sort_handle"></td>
-            <td>
-              <%= link_to(forum_category.name.to_s_default, admin_forum_category_path(forum_category)) %>
-            </td>
-            <td></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
-  </div>
+      <% end %>
+    </tbody>
+  </table>
 <% end %>
