--- a/cms/app/views/dm_cms/admin/shared/_liquid_tags_ref.html.erb
+++ b/cms/app/views/dm_cms/admin/shared/_liquid_tags_ref.html.erb
@@ -1,27 +1,65 @@
-<% content_for :sidebar do %>
-  <div class="tagsinput block">
-    <p>List of available tags<br><small><em>click for details</em></small></p>
-    <% Liquid::Template.tags.sort.each do |tag, tag_class| %>
-      <% if tag_class.respond_to?(:details) && !tag_class.details[:summary].blank? %>
-        <a href="#" title="<%= tag_class.details[:summary] %>" data-toggle="modal" data-target="<%= "#tag_example_#{tag}" %>" ><span class="tag"><%= tag %></span></a>
+<%#--- following should not be in the sidebar, but main content section %>
+<%= modal_dialog title: 'Tag Reference', id: "tag_reference" do %>
+  <%  tag_group = Liquid::Template.tags.sort.find_all {|x| x[1].respond_to?(:details) && !x[1].details[:description].blank?} %>
+  <%  tag_group = tag_group.group_by {|x| (x[1].details[:category].blank? ? 'uncategorized' : x[1].details[:category]) }.sort %>
+  <div class="row" data-spy="scroll" data-target=".tag_details">
+    <div class="col-sm-3">
+      <div class="tag_nav" id="tag_accordion">
+        <ul class="nav nav-stacked">
+          <% tag_group.each do |category, tag_array| %>
+            <li>
+              <%= link_to category, "\#__#{category}", data: {toggle: 'collapse', parent: '#tag_accordion'} %>
+              <ul id="__<%= category %>" class="collapse">
+                <% tag_array.each do |tag_item| %>
+                  <li><%= link_to tag_item[0], "\##{tag_item[0]}"%></li>
+                <% end %>
+              </ul>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+    <div class="col-sm-9 tag_details">
+      <% tag_group.each do |category, tag_array| %>
+        <h2><%= category %></h2>
+        <% tag_array.each do |tag_item| %>
+          <%= subsection title: tag_item[0], id: tag_item[0] do %>
+            <%= markdown tag_item[1].details[:description], safe: false %>
+            <%= "<pre>#{tag_item[1].details[:example]}</pre>".html_safe if tag_item[1].details[:example].present? %>
+          <% end %>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
 <% end %>
 
-<%#--- following should not be in the sidebar, but main content section %>
-<% Liquid::Template.tags.each do |tag, tag_class| %>
-  <% if tag_class.respond_to?(:details) && !tag_class.details[:description].blank? %>
-    <div id="<%= "tag_example_#{tag}" %>" class="modal hide fade" style="height: 400px;" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h5 id="myModalLabel"><%= tag %></h5>
-      </div>
-      <div class="modal-body">
-        <%= markdown tag_class.details[:description], safe: false %>
-        <%= "<pre>#{tag_class.details[:example]}</pre>".html_safe if tag_class.details[:example].present? %>
-      </div>
+<script type="text/javascript" charset="utf-8">
+$('#tag_reference').on('show.bs.modal', function () {
+    $('.modal .modal-body .tag_details').css('max-height', $(window).height() * 0.7);
+    $('.modal .modal-body .tag_nav').css('max-height', $(window).height() * 0.7);
+});
+</script>
+
+
+<% if false %>
+  <% content_for :sidebar do %>
+    <div class="tagsinput block">
+      <p>List of available tags<br><small><em>click for details</em></small></p>
+      <% Liquid::Template.tags.sort.each do |tag, tag_class| %>
+        <% if tag_class.respond_to?(:details) && !tag_class.details[:summary].blank? %>
+          <a href="#" title="<%= tag_class.details[:summary] %>" data-toggle="modal" data-target="<%= "#tag_example_#{tag}" %>" ><span class="tag"><%= tag %></span></a>
+        <% end %>
+      <% end %>
     </div>
   <% end %>
-<% end %>
 
+  <%#--- following should not be in the sidebar, but main content section %>
+  <% Liquid::Template.tags.each do |tag, tag_class| %>
+    <% if tag_class.respond_to?(:details) && !tag_class.details[:description].blank? %>
+      <%= modal_dialog title: tag, id: "tag_example_#{tag}" do %>
+        <%= markdown tag_class.details[:description], safe: false %>
+        <%= "<pre>#{tag_class.details[:example]}</pre>".html_safe if tag_class.details[:example].present? %>
+      <% end %>
+    <% end %>
+  <% end %>
+<% end %>
