make icons consistent

--- a/newsletter/app/views/dm_newsletter/admin/newsletters/index.html.erb
+++ b/newsletter/app/views/dm_newsletter/admin/newsletters/index.html.erb
@@ -1,6 +1,6 @@
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
-    <%= link_to(icon_label('icon-plus', 'New'), new_admin_newsletter_path, title: 'New Newsletter', class: "btn btn-xs btn-default") %>
+    <%= link_to(icon_label(:new, 'New'), new_admin_newsletter_path, title: 'New Newsletter', class: "btn btn-xs btn-default") %>
   <% end %>
 <% end %>
 
