--- a/forum/app/views/dm_forum/admin/forum_categories/_content_toolbar.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_categories/_content_toolbar.html.erb
@@ -1,5 +1,5 @@
 <%= nav_bar_items([
-      link_to(icon_label('icon-edit', 'Edit'), [:edit, :admin, item], :class => "nav-btn-primary"),
-      link_to(icon_label('icon-trash', 'Delete'), [:admin, item], method: :delete, class: "nav-btn-danger", data: {confirm: 'Are you sure you wish to delete this category?  All forums and comments will also be deleted!'})
+      link_to(icon_label(:edit, 'Edit'), [:edit, :admin, item], :class => "nav-btn-primary"),
+      link_to(icon_label(:trash, 'Delete'), [:admin, item], method: :delete, class: "nav-btn-danger", data: {confirm: 'Are you sure you wish to delete this category?  All forums and comments will also be deleted!'})
     ])
 %>
