--- a/forum/app/views/dm_forum/admin/forum_sites/_form.html.erb
+++ b/forum/app/views/dm_forum/admin/forum_sites/_form.html.erb
@@ -3,7 +3,10 @@
 
   <%= f.error_notification message: "Please review the problems below" %>
 
-	<%= panel title: @title do %>
+  <% toolbar = capture do %>
+    <%= link_to icons(:cancel), dm_forum.admin_forum_site_url, class: 'btn btn-link btn-icon' %>
+  <% end %>
+	<%= panel title: @title, toolbar: toolbar do %>
 
     <%= f.input :enabled, as: :toggle, label: 'Enable Forums?' %>
     <%= f.input :tagline, as: :text, label: 'Tagline', input_html: { rows: 4, class: 'input-block-level' } %>
