--- a/event/app/views/dm_event/admin/workshops/index.html.erb
+++ b/event/app/views/dm_event/admin/workshops/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :content_title, 'Workshop Dashboard' %>
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
-    <%= link_to(icon_label('icon-plus', 'New'), new_admin_workshop_path, title: 'New Workshop', class: "btn btn-xs btn-default") %>
+    <%= link_to(icon_label(:new, 'New'), new_admin_workshop_path, title: 'New Workshop', class: "btn btn-xs btn-default") %>
   <% end %>
 <% end %>
 
@@ -64,7 +64,7 @@
 <% end %>
 
 <% unless @workshops_past.empty? %>
-  <%= panel title: 'Past Workshops' do %>
+  <%= panel body: false, title: 'Past Workshops' do %>
     <table class="table table-striped table-bordered table-block">
       <thead>
         <tr>
